--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Dungeon Crawler</string>
+    <string name="enter_choices">enter choices</string>
     <string-array name="races">
         <item>Human</item>
         <item>Minotaur</item>
