updated inventory to item buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
         <item>Fisherman</item>
         <item>Apprentice</item>
         <item>Clergyman</item>
+        <item>Test</item>
     </string-array>
 </resources>
